examples/test/testpolicy9484.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9484
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key36: value46
      key37: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
          key25: value9
          key21: value5
      podSelector:
        matchLabels:
          key17: value9
          key27: value1
          key9: value21
